[package]
name = "music-sort"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    'console', 
    'Window', 
    'Document', 
    'Element', 
    'HtmlElement', 
    'Node', 
    'CanvasRenderingContext2d',
    'HtmlCanvasElement',
]}
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"